# python_demo

./: .gitignore  check.sh  mypy.ini  pip_install_from_nexus.sh  requirements.txt  setup.cfg  setup.py
liza_aux/: common_util.py  config.py
