[metadata]
name = arthas-util
version = 0.1.dev1
author = AliExpressKnowledgeTeam


[flake8]
exclude = junk/*,__pycache__,*_pb2.py
ignore = E121,E123,E126,E203,E226,E704,E731,W503,W504
per-file-ignores = __init__.py:F401
max-line-length = 120

[mypy]
exclude = (junk/*|airflow/*)
ignore_missing_imports = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy==1.22.0
    pandas==2.0.3

    mypy==0.961
    flake8==3.9.2

    addict==2.4.0
    attrs==21.4.0
    requests==2.31.0